Document --add-opens on JDK9+